---------------------------
  Contributors
---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen

---------------------------
  Jackdmp changes log
---------------------------

2007-12-03 Stephane Letz  <letz@grame.fr>

	* Correct bug in CoreAudio driver sample rate management.

2007-11-30 Stephane Letz  <letz@grame.fr>

	* Correct JackMachNotifyChannel::ClientNotify.

2007-11-29 Stephane Letz  <letz@grame.fr>

	* Correct fPeriodUsecs computation in JackAudioDriver::SetBufferSize and JackAudioDriver::SetSampleRate. 

2007-11-28 Stephane Letz  <letz@grame.fr>
	* On OSX, use jack server name in notification system.

2007-11-21 Stephane Letz  <letz@grame.fr>

	* On OSX, use CFNotificationCenterPostNotificationWithOptions with kCFNotificationDeliverImmediately | kCFNotificationPostToAllSessions for server ==> JackRouter plugin notification.

2007-11-20 Stephane Letz  <letz@grame.fr>

	* Correct CheckPort in JackAPI.cpp.

2007-11-15 Stephane Letz  <letz@grame.fr>

	* Move OSX start/stop notification mechanism in Jackdmp.cpp.

2007-11-05 Stephane Letz  <letz@grame.fr>

	* Use of JackWinSemaphore instead of JackWinEvent for inter-process synchronization.
	* Correct types.h for use with MINGW on Windows.

2007-11-04 Stephane Letz  <letz@grame.fr>

	* Add an implementation for obsolete jack_internal_client_new and jack_internal_client_close. Add missing jack_port_type_size.

2007-11-02 Stephane Letz  <letz@grame.fr>

	* Correct ALSA driver Attach method: internal driver may have changed the buffer_size and sample_rate values.
	* Add JackWinSemaphore class.

2007-10-01 Stephane Letz  <letz@grame.fr>

	* Server and user directory related code moved in a JackTools file.
	* Client name rewritting to remove path characters (used in fifo naming).

2007-10-30 Stephane Letz  <letz@grame.fr>
